# transfer-learning-bci

./: .gitignore  CONTEXT.md  Context.md  PHASE_0_REPORT.md  PHASE_1_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  PHASE_4_REPORT.md  PRETRAIN_PLAN.md  README.md  csp_riemannian.md  hello.py  pyproject.toml
configs/: default.yaml
configs/dataset/: bci_iv2a.yaml  physionet.yaml
results/: baseline_b_riemannian.json  baseline_c_vit.json  dual_branch_attention.json  dual_branch_attention_full.json  dual_branch_concat_full.json  dual_branch_gated_full.json  finetune_imagenet.json  finetune_scratch.json  finetune_transfer.json  phase4_summary.json  pretrain_physionet.json  real_baseline_a_csp_lda.json  real_baseline_b_riemannian.json  real_baseline_c_vit.json  reduced_data_results.json
runs/gpu_run/results/: index.json  real_baseline_a_csp_lda.json  real_baseline_b_riemannian.json  real_baseline_c_vit.json  real_dual_branch_attention_vit.json  real_dual_branch_attention_vit_loso.json  real_dual_branch_gated_vit.json  real_pretrain_physionet_vit.json
runs/gpu_run/results/manifests/: baseline_csp.json  baseline_riemann.json  vit_baseline.json
runs/gpu_run/splits/: bci_iv2a_splits.json
runs/gpu_run_0/results/: real_dual_branch_concat_vit.json
runs/gpu_run_1/results/: phase4_stats.json  phase4_summary.json  real_baseline_a_csp_lda.json  real_baseline_b_riemannian.json  real_baseline_c_vit.json  real_dual_branch_attention_vit.json  real_dual_branch_attention_vit_loso.json  real_dual_branch_gated_vit.json  real_finetune_imagenet_vit.json  real_finetune_scratch_vit.json  real_finetune_transfer_vit.json  real_pretrain_physionet_vit.json  real_reduced_data_results_vit.json
runs/gpu_run_new/results/: real_baseline_a_csp_lda.json  real_baseline_c_vit.json
scripts/: baseline_a_csp_lda.py  baseline_b_riemannian.py  baseline_c_vit.py  baseline_improved.py  finetune_bci_iv2a.py  phase4_compile_results.py  phase4_stats.py  phase4_visualize.py  pretrain_physionet.py  reduced_data_experiment.py  run_all.sh  run_experiment.sh  run_full_experiment.py  smoke_test.py  train_dual_branch.py
scripts/pipeline/: stage_01_download.py  stage_02_baseline_a.py  stage_03_baseline_b.py  stage_04_baseline_c.py  stage_04_pretrain_vit.py  stage_05_dual_attention.py  stage_05_vit_baseline.py  stage_06_dual_branch.py  stage_06_dual_concat.py  stage_06_dual_gated.py  stage_07_dual_gated.py  stage_07_pretrain.py  stage_07_reduced_data.py  stage_08_finetune.py  stage_08_pretrain.py  stage_08_results.py  stage_09_finetune.py  stage_09_reduced_data.py  stage_10_phase4.py  stage_10_reduced_data.py  stage_11_phase4.py
src/bci/: __init__.py
src/bci/data/: __init__.py  augmentation.py  dataset.py  download.py  dual_branch_builder.py  preprocessing.py  transforms.py
src/bci/features/: __init__.py  csp.py  fbcsp.py  riemannian.py
src/bci/models/: __init__.py  dual_branch.py  efficientnet_branch.py  fusion.py  math_branch.py  vit_branch.py
src/bci/training/: __init__.py  cross_validation.py  evaluation.py  splits.py  trainer.py
src/bci/utils/: __init__.py  config.py  logging.py  results_index.py  seed.py  visualization.py
tests/: test_baselines.py  test_cv.py  test_dual_branch_builder.py  test_features.py  test_improved_baselines.py  test_phase1.py  test_phase2.py  test_phase3.py  test_trainer_eval.py  test_transfer_and_reduced.py  test_vit_pretrain.py
