[project]
name = "transfer-learning-bci"
version = "0.1.0"
description = "Transfer Learning Based Motor Imagery EEG Classification with Reduced Data"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Deep Learning
    "torch>=2.1.0,<2.6.0",
    "torchvision>=0.16.0,<0.21.0",
    "timm>=1.0.0",
    # EEG Processing
    "mne>=1.8.0",
    "moabb>=1.2.0,<1.4.2",
    # Signal Processing
    "pywavelets>=1.8.0",
    # Riemannian Geometry
    "pyriemann>=0.7",
    # Scientific Computing
    "numpy>=1.24.0,<2.2.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.12.1",
    # Configuration
    "pyyaml>=6.0",
    # Experiment Tracking
    "tensorboard>=2.18.0",
    # Progress bars
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
wandb = ["wandb>=0.18.0"]

[project.scripts]
bci-download = "bci.data.download:main"
bci-preprocess = "bci.data.preprocessing:main"
bci-train = "bci.training.trainer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bci"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]

# [tool.pyright]
# venvPath = "."
# venv = ".venv"
# pythonVersion = "3.13"
# pythonPlatform = "Linux"
# extraPaths = ["src"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true